# arduino-example

./: Makefile  README.md  blink.cpp  compile.sh  flash.sh  linking.sh
.github/workflows/: arduino-build.yml  blank.yml  nrf-build.yml
arduino/: blink.cpp  flash.sh
nrf52/hello_world/: CMakeLists.txt
nrf52/hello_world/src/: main.c
